# ordered_set

./: README.md  setup.cfg
src/ordered_set/: __init__.py
