[metadata]
name = ordered_set
version = 0.0.1

[options]
package_dir=
    =src
packages = find:

 # dicts < 3.7 is not guaranteed order
python_requires = >=3.7
install_requires =
    importlib

# [options.extras_require]
# tests =
#     dict_tree @ git+https://github.com/denwong47/dict_tree

[options.packages.find]
where=src